src/objects/inscor__UOM_Conversion__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Allowed_UOM__c</fullName>
        <label>Allowed UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Base_UOM__c</fullName>
        <label>Base UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Conversion_Factor__c</fullName>
        <label>Conversion Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>UOM Conversion</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Base_UOM__c</columns>
        <columns>inscor__Allowed_UOM__c</columns>
        <columns>inscor__Conversion_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UOMC-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UOM Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>